--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "name": "PIO Debug",
             "executable": "/home/josh/Arduino/KeyLight/.pio/build/esp32doit-devkit-v1/firmware.elf",
             "projectEnvName": "esp32doit-devkit-v1",
-            "toolchainBinDir": "/home/josh/.platformio/packages/toolchain-xtensa32/bin",
+            "toolchainBinDir": "/home/josh/.platformio/packages/toolchain-xtensa32@2.50200.80/bin",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug"
@@ -27,7 +27,7 @@
             "name": "PIO Debug (skip Pre-Debug)",
             "executable": "/home/josh/Arduino/KeyLight/.pio/build/esp32doit-devkit-v1/firmware.elf",
             "projectEnvName": "esp32doit-devkit-v1",
-            "toolchainBinDir": "/home/josh/.platformio/packages/toolchain-xtensa32/bin",
+            "toolchainBinDir": "/home/josh/.platformio/packages/toolchain-xtensa32@2.50200.80/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
     ]
