--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.7.0
 	felis/USB-Host-Shield-20@^1.3.2
