--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,4 @@ monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.7.0
 	felis/USB-Host-Shield-20@^1.3.2
-	paulstoffregen/Encoder@^1.4.1
+	madhephaestus/ESP32Encoder@^0.3.8
