--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.7.0
 	felis/USB-Host-Shield-20@^1.3.2
 	madhephaestus/ESP32Encoder@^0.3.8
+	majicdesigns/MD_REncoder@^1.0.1
