--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,7 @@ monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.7.0
 	felis/USB-Host-Shield-20@^1.3.2
-	madhephaestus/ESP32Encoder@^0.3.8
 	majicdesigns/MD_REncoder@^1.0.1
+	madhephaestus/ESP32Encoder@^0.3.8
+	adafruit/Adafruit SSD1306@^2.4.2
+	adafruit/Adafruit BusIO@^1.7.1
